; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_ttm.c_amdgpu_ttm_io_mem_pfn.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_ttm.c_amdgpu_ttm_io_mem_pfn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttm_buffer_object = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct.drm_mm_node = type { i64 }

@PAGE_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ttm_buffer_object*, i64)* @amdgpu_ttm_io_mem_pfn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @amdgpu_ttm_io_mem_pfn(%struct.ttm_buffer_object* %0, i64 %1) #0 {
  %3 = alloca %struct.ttm_buffer_object*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.drm_mm_node*, align 8
  %6 = alloca i64, align 8
  store %struct.ttm_buffer_object* %0, %struct.ttm_buffer_object** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @PAGE_SHIFT, align 8
  %9 = shl i64 %7, %8
  store i64 %9, i64* %6, align 8
  %10 = load %struct.ttm_buffer_object*, %struct.ttm_buffer_object** %3, align 8
  %11 = getelementptr inbounds %struct.ttm_buffer_object, %struct.ttm_buffer_object* %10, i32 0, i32 0
  %12 = call %struct.drm_mm_node* @amdgpu_find_mm_node(%struct.TYPE_4__* %11, i64* %6)
  store %struct.drm_mm_node* %12, %struct.drm_mm_node** %5, align 8
  %13 = load %struct.ttm_buffer_object*, %struct.ttm_buffer_object** %3, align 8
  %14 = getelementptr inbounds %struct.ttm_buffer_object, %struct.ttm_buffer_object* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @PAGE_SHIFT, align 8
  %19 = lshr i64 %17, %18
  %20 = load %struct.drm_mm_node*, %struct.drm_mm_node** %5, align 8
  %21 = getelementptr inbounds %struct.drm_mm_node, %struct.drm_mm_node* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add i64 %19, %22
  %24 = load i64, i64* %6, align 8
  %25 = load i64, i64* @PAGE_SHIFT, align 8
  %26 = lshr i64 %24, %25
  %27 = add i64 %23, %26
  ret i64 %27
}

declare dso_local %struct.drm_mm_node* @amdgpu_find_mm_node(%struct.TYPE_4__*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
